fixed few things /

--- a/images/style.css
+++ b/images/style.css
@@ -5,7 +5,7 @@
   }
   
   body {
-    margin-top: 100px;
+    margin-top: 100px 0;
   }
   
   h1,
@@ -19,7 +19,7 @@
   }
   
   h2 {
-    display: block;
+    
     font-size: 48px;
   }
   
@@ -29,7 +29,7 @@
   }
   
   p {
-    display: block;
+    
     font-size: 18px;
     line-height: 1.5;
   }
@@ -90,6 +90,10 @@
   }
   
   @media (max-width: 576px) {
+    h1 {
+        font-size: 48px;
+        line-height: 1.5;
+    }
     h2 {
       font-size: 32px;
       text-align: center;
@@ -101,7 +105,7 @@
     img {
       display: none;
     }
-    .content-button {
+    .project-link {
       display: block;
       text-align: center;
       margin: 0 20px;
