--- a/style.css
+++ b/style.css
@@ -130,5 +130,11 @@
       text-align: center;
       margin: 0 20px;
     }
+
+    .col-6 {
+      flex: 0 0 auto;
+      width: 100%;
+  }
+  
   }
   
